# DT133G

./: .gitignore  CMakeLists.txt  README.md  main  main.c
.github/workflows/: BuildAndTest.yaml
lab_1/: CMakeLists.txt  lab_1.txt
lab_1/src/: main.c
lab_1/src/list/: list.c  list.h
lab_1/src/queue/: queue.c  queue.h
lab_1/src/stack/: stack.c  stack.h
lab_1/tests/presentationTest/: presentationTest.c
lab_1/tests/testlist/: testlist.c
lab_1/tests/testqueue/: testqueue.c
lab_1/tests/teststack/: teststack.c
lab_2/: CMakeLists.txt  lab_2.txt
lab_2/src/: main.c
lab_2/src/load_files/: load_file.c
lab_2/src/sort/: insertion.c
lab_2/src/sort/insertion/: insertion.c  insertion.h
lab_2/src/sort/merge/: mergelist.c  mergelist.h
lab_2/src/utils/: utils.c  utils.h
lab_2/tests/lab1Tests/: lab1Tests.c
lab_2/tests/personalNumberTest/: personalNumberTest.c
lab_2/tests/presentationTest/: presentationTest.c
lab_3/: CMakeLists.txt  ex_1.txt.txt
lab_3/src/: main.c
lab_3/src/binarytree/: CMakeLists.txt  binarytree.c  binarytree.h
lab_3/src/loadfiles/: CMakeLists.txt  load_file.c  load_file.h  test_load_file.c
lab_3/tests/operations/: operations.c
lab_3/tests/presentation/: presentation.c
lab_3/tests/sortingproblems/: sortingproblems.c
lab_4/: CMakeLists.txt  ex_1.txt
lab_4/src/: main.c
lab_4/src/bellmanford/: CMakeLists.txt  bellmanford.c  bellmanford.h
lab_4/src/graph/: CMakeLists.txt  graph.c  graph.h
lab_4/src/list/: CMakeLists.txt  list.c  list.h
lab_4/tests/bellman/: bellmantest.c
lab_4/tests/graph/: graphtest.c
lab_4/tests/presentation/: presentation.c
src/: main.c
src/list/: list.c  list.h
src/queue/: queue.c  queue.h
src/stack/: stack.c  stack.h
tests/testlist/: testlist.c
tests/testqueue/: testqueue.c
